Modularizing project(Beta 0.1)